Backspace/delete at start of table cell shouldn't step out of cell https://bugs.webkit.org/show_bug.cgi?id=35372

Patch by Shezan Baig <sbaig1@bloomberg.net> on 2013-03-14
Reviewed by Ryosuke Niwa.

Source/WebCore:

Make Delete and ForwardDelete commands be no-ops if we are at the first
position or last position of a table cell respectively.

Tests: editing/deleting/backspace-at-table-cell-beginning.html
       editing/deleting/forward-delete-at-table-cell-ending.html

* editing/TypingCommand.cpp:
(WebCore::TypingCommand::deleteKeyPressed):
(WebCore::TypingCommand::forwardDeleteKeyPressed):

LayoutTests:

* editing/deleting/backspace-at-table-cell-beginning-expected.txt: Added.
* editing/deleting/backspace-at-table-cell-beginning.html: Added.
* editing/deleting/forward-delete-at-table-cell-ending-expected.txt: Added.
* editing/deleting/forward-delete-at-table-cell-ending.html: Added.

Canonical link: https://commits.webkit.org/130707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145871 268f45cc-cd09-0410-ab3c-d52691b4dbfc